@@ -2,7 +2,7 @@ Package: hdi
 Type: Package
 Title: High-Dimensional Inference
 Version: 0.1-6
-Date: 2016-03-14
+Date: 2016-03-18
 Author: Lukas Meier [aut, cre], Ruben Dezeure [aut], Nicolai Meinshausen [aut], Martin Maechler [aut], Peter Buehlmann [aut]
 Maintainer: Lukas Meier <meier@stat.math.ethz.ch>
 Description: Implementation of multiple approaches to perform inference in high-dimensional models.
