@@ -76,11 +76,11 @@ groupBound(x, y, group, alpha = 0.05, eps = 0.1, nsplit = 11,
 }
 
 \examples{
-## Create a regression problem with block-design: p = 10, n = 30,
-## block size B = 5 and within-block correlation of rho = 0.99
-p   <- 10
-n   <- 30
-B   <- 5
+## Create a regression problem with correlated design: p = 6, n = 50,
+## block size B = 3 and within-block correlation of rho = 0.99
+p   <- 6
+n   <- 50
+B   <- 3
 rho <- 0.99
 
 ind   <- rep(1:ceiling(p / B), each = B)[1:p]
@@ -102,16 +102,18 @@ y  <- as.numeric(x \%*\% beta + rnorm(n))
 
 ## Compute lower bounds:
 
-## Lower bound for the L1-norm of *all* variables 1-10 of the sparsest
+## Lower bound for the L1-norm of *all* variables 1-6 of the sparsest
 ## optimal vector
-lowerBoundAll <- groupBound(x, y, 1:p)
-cat("\nlower bound for all variables 1-10: ", lowerBoundAll, "\n")
+nsplit <- 4  ## to make example run fast (use larger value)
+lowerBoundAll <- groupBound(x, y, 1:p, nsplit = nsplit)
+cat("\nlower bound for all variables 1-6: ", lowerBoundAll, "\n")
 
 ## Compute additional lower bounds:
-## Lower bounds for variable 1 itself, then group {1,3}, 1-3, 1-4, 1-5, 2-5, 2-10
-lowerBound <- groupBound(x, y, list(1, c(1,3), 1:3, 1:4, 1:5, 2:5, 2:10))
-cat("lower bound for the groups\n\t {1}, {1,3}, {1,2,3}, {1..4}, {1..5}, {2..5}, {2..10}:\n\t  ",
-format(formatC(c(lowerBound))), "\n")
+## Lower bounds for variable 1 itself, then group {1,3}, 1-2, 1-3, 2-6,
+lowerBound <- groupBound(x, y, list(1, c(1,3), 1:2, 1:3, 2:6),
+                         nsplit = nsplit)
+cat("lower bound for the groups\n\t {1}, {1,3}, {1,2}, {1..3}, {2..6}:\n\t",
+    format(formatC(c(lowerBound))), "\n")
 }
 \keyword{confidence intervals}
 \keyword{regression}
