@@ -42,22 +42,20 @@
   groups of variables.
 }
 \examples{
-## Create a regression problem with block-design: p = 6, n = 30,
-## block size B = 3 and within-block correlation of rho = 0.99
-p   <- 6
-n   <- 30
-B   <- 3
-rho <- 0.99
+%% the following code is in donttest environment to
+%% speed-up computing
+%% >>> copy any changes to "../tests/ex-plotClusterGroupBound.R" <<< to ensure
+%% code is running
+\donttest{
+## Create a regression problem with correlated design (n = 10, p = 3):
+## a block of size 2 and a block of size 1, within-block correlation is 0.99
 
-ind <- rep(1:ceiling(p / B), each = B)[1:p]
+set.seed(29)
+p   <- 3
+n   <- 10
+
 Sigma <- diag(p)
-
-for (ii in unique(ind)) {
-  id <- which(ind == ii)
-  Sigma[id, id] <- rho
-}
-diag(Sigma) <- 1
-print.table(Sigma, zero.print = ".") ## depicting the 2 blocks
+Sigma[1,2] <- Sigma[2,1] <- 0.99
 
 x <- matrix(rnorm(n * p), nrow = n) \%*\% chol(Sigma)
 
@@ -68,7 +66,7 @@ beta[1] <- 5
 y  <- as.numeric(x \%*\% beta + rnorm(n))
 
 ## Compute the lower bound for all groups in a hierarchical clustering tree
-cgb5 <- clusterGroupBound(x, y, nsplit = 5)
+cgb5 <- clusterGroupBound(x, y, nsplit = 4) ## use larger value for nsplit!
 
 ## Plot the tree with y-axis proportional to the (log) of the number of
 ## group members and node sizes proportional to the lower l1-norm bound.
@@ -77,6 +75,7 @@ plot(cgb5)
 ## Show the lower bound on the y-axis and node sizes proportional to
 ## number of group members
 plot(cgb5, yaxis = "")
+}
 }
 \keyword{htest}% from RShowDoc("KEYWORDS")
 \keyword{regression}
